<resources>
    <string name="app_name">GPS Map Camera App</string>
    <string name="collection">Collection</string>
    <string name="map_data">Map Data</string>
    <string name="default_1">Folders</string>
    <string name="template">Template</string>
    <string name="settings">Settings</string>
    <string name="ratio">Ratio</string>
    <string name="none">None</string>
    <string name="timer_off">Timer off</string>
    <string name="focus_manual">Focus Manual</string>
    <string name="mirror_off">Mirror off</string>
    <string name="sound_off">Sound off</string>
    <string name="white_balance">White Balance</string>
    <string name="scene_mode">Scene Mode</string>
    <string name="camera_level">Camera Level</string>
    <string name="focus_auto">Focus Auto</string>
    <string name="select_folder">Select Folder</string>
    <string name="save_original_photos">Save original Photos</string>
    <string name="default_2">Default</string>
    <string name="site_1">Site 1</string>
    <string name="site_2">Site 2</string>
    <string name="automatic">Automatic</string>
    <string name="gps_coordinates">GPS Coordinates</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="location">Location</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="line_3">Line 3</string>
    <string name="automatic_1">Automatic</string>
    <string name="manual">Manual</string>
    <string name="automatic_2">Automatic</string>
    <string name="manual_1">Manual</string>
    <string name="automatic_3">Automatic</string>
    <string name="manual_3">Manual</string>
    <string name="manual_5">Manual</string>
    <string name="add_your_preferred_location_manually_and_add_it_as_a_geostamp_on_your_photos">Add your preferred location manually and add it as a geostamp on your photos</string>
    <string name="title">Title</string>
    <string name="add_title">Add title</string>
    <string name="add_title_1">Add title</string>
    <string name="map_type">Map Type</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="the_data_has_been_manually_set_if_you_want_you_can_select_the_automatic_fetched_current_location_from_the_above_drop_down_menu">The data has been manually set. If you want you can select the automatic fetched current location from the above drop down menu.</string>
    <string name="template_1">Template</string>
    <string name="captured_by_gps_map_camera_app">Built by : Simatrix GPS Camera</string>
    <string name="map_type_1">Map Type</string>
    <string name="short_address">Short Address</string>
    <string name="automatic_4">Automatic</string>
    <string name="address">Address</string>
    <string name="lat_long">Lat/Long</string>
    <string name="plus_code">Plus Code</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="time_zone">Time Zone</string>
    <string name="numbering">Numbering</string>
    <string name="note_hashtag">Note/Hashtag</string>
    <string name="note_captured_by_gps_map_camera_app">Note : Built by Simatrix GPS Camera</string>
    <string name="weather">Weather</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="percent">%</string>
    <string name="pressure">Pressure</string>
    <string name="altitude">Altitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="lat_long_decimal">Lat 33.516442 Long 73.109588</string>
    <string name="lat_long_tv_bottom_sheet_selection">Lat 33.516442 degs Long 73.109588 degs</string>
    <string name="lat_long_tv_bottom_sheet_selection_decimal_degs_micro">Lat 33.516442 N Long 73.109588 E</string>
    <string name="lat_long_tv_bottom_sheet_selection_decimal_mins_tv">Lat 3330.98652 Long 736.57528</string>
    <string name="plus_code_accuracy_option_8J5MG485HR_sheet">8J5MG485+HR\n</string>
    <string name="concise_option_tv_bottom_sheet">G485+HR</string>
    <string name="utc_tv_bottom_sheet">UTC +05:00</string>
    <string name="gmt_tv_bottom_sheet">GMT +05:00</string>
    <string name="pakistan_standard_time_tv_bottom_sheet">PST</string>
    <string name="plus_five_zero_zero_tv_bottom_sheet">+05:00</string>
    <string name="value_in_celsius_tv_bottom_sheet">0.0 deg C</string>
    <string name="fahrenheit_value_tv_bottom_sheet">32 deg F</string>
    <string name="first_wind_speed_tv">0 km/h</string>
    <string name="second_wind_speed_tv">0 mph</string>
    <string name="third_wind_speed_tv">0 m/s</string>
    <string name="fourth_wind_speed_tv">0 kt</string>
    <string name="humidity_tv_template">%</string>
    <string name="first_pressure_speed_tv">0 hpa</string>
    <string name="second_pressure_speed_tv">0 mmhg</string>
    <string name="third_pressure_speed_tv">0 inHg</string>
    <string name="first_altitude_tv">467 m</string>
    <string name="second_altitude_tv">1532 ft</string>
    <string name="first_accuracy_tv">56.1 m</string>
    <string name="second_accuracy_tv">184 ft</string>
</resources>