<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/back_icon_4"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/back_icon"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029999971" />

    <TextView
        android:id="@+id/manual_tv_activity_map_data_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual_5"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/back_icon_4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029999971" />

    <ImageView
        android:id="@+id/down_icon_2"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/down_icon"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/manual_tv_activity_map_data_entry"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029999971" />

    <ImageView
        android:id="@+id/tick_map_data_manual_icon"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/tick_map_data_manual_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/down_icon_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />


    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_260dp"
        app:layout_constraintTop_toBottomOf="@+id/manual_tv_activity_map_data_entry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.01999998"
        >

        <fragment
            android:id="@+id/map_fragment_data_manual_entry"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/map_full_screen_icon"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/map_full_screen_icon"
            android:layout_marginTop="@dimen/_150sdp"
            android:layout_marginStart="@dimen/_20sdp"
            />

        <ImageView
            android:id="@+id/map_types_icon"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/map_types_icon"
            android:layout_marginStart="@dimen/_250sdp"
            android:layout_marginTop="@dimen/_105sdp"
            />

        <ImageView
            android:id="@+id/pin_location_icon"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_250sdp"
            android:layout_marginTop="@dimen/_155sdp"
            android:src="@drawable/pin_location_icon"
            />

    </FrameLayout>

    <TextView
        android:id="@+id/gps_coordinates_tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_coordinates"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_container"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/latitude_tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gps_coordinates_tv_1"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/latitude_value_tv_manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitude_tv_1"
        app:layout_constraintVertical_bias="0.050000012" />

    <View
        android:id="@+id/latitude_value_view_manual"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_1sdp"
        android:background="#333333"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitude_value_tv_manual"
        app:layout_constraintVertical_bias="0.029999971" />

    <TextView
        android:id="@+id/longitude_tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/latitude_tv_1"
        app:layout_constraintTop_toBottomOf="@+id/gps_coordinates_tv_1"
        app:layout_constraintVertical_bias="0.00999999" />

    <TextView
        android:id="@+id/longitude_value_tv_manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/latitude_value_tv_manual"
        app:layout_constraintTop_toBottomOf="@+id/longitude_tv_1"
        app:layout_constraintVertical_bias="0.050000012" />

    <View
        android:id="@+id/longitude_value_view_manual"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_1sdp"
        android:background="#333333"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/latitude_value_view_manual"
        app:layout_constraintTop_toBottomOf="@+id/longitude_value_tv_manual"
        app:layout_constraintVertical_bias="0.029999971" />

    <TextView
        android:id="@+id/location_tv_manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitude_value_view_manual"
        app:layout_constraintVertical_bias="0.04000002" />

    <EditText
        android:id="@+id/line_1_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/line_1"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_tv_manual"
        app:layout_constraintVertical_bias="0.029999971" />

    <EditText
        android:id="@+id/line_2_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/line_2"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_1_et"
        app:layout_constraintVertical_bias="0.029999971" />

    <EditText
        android:id="@+id/line_3_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/line_3"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_2_et"
        app:layout_constraintVertical_bias="0.029999971" />


</androidx.constraintlayout.widget.ConstraintLayout>